codex-rs/tui/src/snapshots/codex_tui__insert_history__tests__tmux_mode_keeps_inserted_history_visible_above_viewport.snap
---
source: tui/src/insert_history.rs
expression: term.backend()
---




user> hi
assistant> hello
status: ready
prompt> hello
