codex-rs/tui/src/snapshots/codex_tui__insert_history__tests__tmux_mode_keeps_user_prompt_text_visible_when_truncated.snap
---
source: tui/src/insert_history.rs
expression: term.backend()
---
› hello
status: ready
prompt> hello
