codex-rs/tui/src/snapshots/codex_tui__insert_history__tests__tmux_mode_redraws_unchanged_viewport_after_history_insert.snap
---
source: tui/src/insert_history.rs
expression: term.backend()
---





assistant reply
status: ready
prompt> hello
